ISSUE: Redmine 729 PURPOSE: Main menu cleanup DESCRIPTION: Username/password fields don't have enough contrast to be distinguished from the background of the redesigned menu bar, darkening color of the border so that they are more evident.

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -1462,7 +1462,7 @@ textarea {
 	line-height:1.2rem;
 	font-size: .875rem;
 	margin-bottom:.25rem;
-	border: 1px solid #ced4da;
+	border: 1px solid #A51C30;
 }
 .fa-info-circle {
 	font-size: 1.05em;
